vlib/v/checker/tests/char_str.out
vlib/v/checker/tests/char_str.vv:1:1: error: calling `.str()` on type `char` is not allowed, use its address or cast it to an integer instead
    1 | char(91).str()
      | ~~~~~~~~~~~~~~
