vlib/v/checker/tests/char_str.vv
char(91).str()
